components/tree-sitter-conceptbase/source/test/corpus/documentation-frames.txt
==================
doc-frame: tutorial/chapters/cbTutorial.typ:block:1.1
==================

Administration in Department with
    head
      head_of_Administration : Eleonore
  end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier)))))))
    (end_spec)))

==================
doc-frame: tutorial/chapters/cbTutorial.typ:block:1.2
==================

Marketing in Department with
    head
      head_of_Marketing : Phil
  end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier)))))))
    (end_spec)))

==================
doc-frame: tutorial/chapters/cbTutorial.typ:block:1.3
==================

Research in Department with
    head
      head_of_Research : Albert
  end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier)))))))
    (end_spec)))

==================
doc-frame: tutorial/chapters/cbTutorial.typ:block:1.4
==================

Lloyd in Manager with
    salary
        LloydsSalary : 100000
  end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (number
                  (integer))))))))
    (end_spec)))

==================
doc-frame: tutorial/chapters/cbTutorial.typ:block:1.5
==================

Phil in Manager with
    salary
        PhilsSalary : 120000
  end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (number
                  (integer))))))))
    (end_spec)))

==================
doc-frame: tutorial/chapters/cbTutorial.typ:block:1.6
==================

Eleonore in Manager with
    salary
      EleonoresSalary : 20000
  end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (number
                  (integer))))))))
    (end_spec)))

==================
doc-frame: tutorial/chapters/cbTutorial.typ:block:1.7
==================

Albert in Manager with
    salary
      AlbertsSalary : 110000
  end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (number
                  (integer))))))))
    (end_spec)))

==================
doc-frame: tutorial/chapters/cbTutorial.typ:block:1.8
==================

Maria in Employee with
    dept
      MariasDepartment : Administration
    salary
      MariasSalary : 10000
  end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier))))))
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (number
                  (integer))))))))
    (end_spec)))

==================
doc-frame: tutorial/chapters/cbTutorial.typ:block:1.9
==================

Herbert in Employee with
    dept
      HerbertsDepartment : Marketing
    salary
      HerbertsSalary : 60000
  end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier))))))
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (number
                  (integer))))))))
    (end_spec)))

==================
doc-frame: tutorial/chapters/cbTutorial.typ:block:1.10
==================

Edward in Employee with
    dept
      EdwardsDepartment : Research
    salary
      EdwardsSalary : 50000
  end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier))))))
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (number
                  (integer))))))))
    (end_spec)))

==================
doc-frame: tutorial/chapters/cbTutorial.typ:inline:2
==================

Manager in Class isA Employee
end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_isa)
    (class_list
      (object_name
        (label
          (identifier))))
    (end_spec)))

==================
doc-frame: tutorial/chapters/cbTutorial.typ:inline:3
==================

Employee in Class with
attribute
        name: String;
        salary: Integer;
        dept: Department;
        boss: Manager
end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier))))
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier))))
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier))))
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier)))))))
    (end_spec)))

==================
doc-frame: tutorial/chapters/cbTutorial.typ:inline:4
==================

Department in Class with
         attribute
               head: Manager
end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier)))))))
    (end_spec)))

==================
doc-frame: tutorial/chapters/cbTutorial.typ:inline:5
==================

Production in Department with
  head
    head_of_Production : Lloyd
end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier)))))))
    (end_spec)))

==================
doc-frame: tutorial/chapters/cbTutorial.typ:inline:6
==================

objects in the database or instances of the system builtin classes
_Integer_, _Real_ or _String_. Objects which
instantiate these classes are generated automatically when referenced in
a Telos-frame. At this point it is important to recognize, that
attributes specified at the class level do not need to be instantiated
at the instance level. On the other hand an instance of a class
containing an attribute may contain several instances of this attribute.

Example: \

George in Employee with
        name
                GeorgesName: "George D. Smith"
        salary
                GeogesBaseSalary : 30000;
                GeorgesBonusSalary : 3000
end

---

(source_file)

==================
doc-frame: tutorial/chapters/cbTutorial2.typ:block:1.1
==================

Policy in EntityType with
  attr
   startdate: Date;
   enddate: Date;
   premium: Integer
end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier))))
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier))))
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier)))))))
    (end_spec)))

==================
doc-frame: tutorial/chapters/cbTutorial2.typ:block:1.2
==================

holds in RelationshipType with
  role
    customer: Customer;
    policy: Policy
end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier))))
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier)))))))
    (end_spec)))

==================
doc-frame: tutorial/chapters/cbTutorial2.typ:block:1.3
==================

Claim in EntityType with
  attr
    description: String
end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier)))))))
    (end_spec)))

==================
doc-frame: tutorial/chapters/cbTutorial2.typ:block:1.4
==================

claim_policy in RelationshipType with
  role
    claim: Claim;
    policy: Policy
end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier))))
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier)))))))
    (end_spec)))

==================
doc-frame: tutorial/chapters/cbTutorial2.typ:block:1.5
==================

holds1 in holds with
  customer c: mary
  policy p: policy1
end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier))))))
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier)))))))
    (end_spec)))

==================
doc-frame: tutorial/chapters/cbTutorial2.typ:block:1.6
==================

PredicateTask in QueryClass isA Task with
  constraint
    c1: $ exists s1,s2/Task A_e(this,successor,s1) and
          A_e(this,successor,s2) and (s1 \= s2) $
end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_isa)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (assertion_embedding
              (assertion
                (formula
                  (kw_exists)
                  (variable_bind_list
                    (variable_bind
                      (var_list
                        (identifier)
                        (identifier))
                      (object_name
                        (label
                          (identifier)))))
                  (formula
                    (formula
                      (formula
                        (literal
                          (label
                            (identifier))
                          (literal_arg_list
                            (literal_arg
                              (object_name
                                (label
                                  (identifier))))
                            (literal_arg
                              (object_name
                                (label
                                  (identifier))))
                            (literal_arg
                              (object_name
                                (label
                                  (identifier)))))))
                      (kw_and)
                      (formula
                        (literal
                          (label
                            (identifier))
                          (literal_arg_list
                            (literal_arg
                              (object_name
                                (label
                                  (identifier))))
                            (literal_arg
                              (object_name
                                (label
                                  (identifier))))
                            (literal_arg
                              (object_name
                                (label
                                  (identifier))))))))
                    (kw_and)
                    (formula
                      (literal
                        (ar_expr
                          (ar_term
                            (ar_factor
                              (object_name
                                (label
                                  (identifier))))))
                        (comp_symbol)
                        (ar_expr
                          (ar_term
                            (ar_factor
                              (object_name
                                (label
                                  (identifier))))))))))))))))
    (end_spec)))

==================
doc-frame: tutorial/chapters/cbTutorial2.typ:block:1.7
==================

LoopTask in QueryClass isA LoopTaskOf 
end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_isa)
    (class_list
      (object_name
        (label
          (identifier))))
    (end_spec)))

==================
doc-frame: tutorial/chapters/cbTutorial2.typ:block:1.8
==================

receiveClaim in Task with
   successor
     n: checkPolicy
end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier)))))))
    (end_spec)))

==================
doc-frame: tutorial/chapters/cbTutorial2.typ:block:1.9
==================

checkPolicy in Task with
    successor
      n1: assignAssessor;
      n2: proposePayment
end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier))))
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier)))))))
    (end_spec)))

==================
doc-frame: tutorial/chapters/cbTutorial2.typ:block:1.10
==================

assignAssessor in Task with
     successor
       n: assessDamage
end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier)))))))
    (end_spec)))

==================
doc-frame: tutorial/chapters/cbTutorial2.typ:block:1.11
==================

assessDamage in Task with
   successor
     n: proposePayment
end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier)))))))
    (end_spec)))

==================
doc-frame: tutorial/chapters/cbTutorial2.typ:block:1.12
==================

proposePayment in Task with
    successor
      accept: processPayment;
      reject: checkPolicy
end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier))))
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier)))))))
    (end_spec)))

==================
doc-frame: tutorial/chapters/cbTutorial2.typ:block:1.13
==================

processPayment in Task with
   successor
     n: finish
end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier)))))))
    (end_spec)))

==================
doc-frame: tutorial/chapters/cbTutorial2.typ:block:1.14
==================

finish in Task end

Assessor in Agent with
  executes
    t1: assessDamage
end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (end_spec))
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier)))))))
    (end_spec)))

==================
doc-frame: tutorial/chapters/cbTutorial2.typ:block:1.15
==================

InsuranceAgent in Agent with
   executes
     t1: receiveClaim;
     t2: proposePayment
end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (kw_in)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier))))
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier)))))))
    (end_spec)))

==================
doc-frame: tutorial/chapters/cbTutorial2.typ:block:1.16
==================

Attributes in ConceptBase are by default multi-valued, ie.~they can have
zero, one or many values. This is exaclty what we want in this case.

We finalize this tutorial by attaching some objects types as
input/output of tasks.

#quote(block: true)[
*Exercise 15:* Define some of the object types of exercise 5 as
input/output of the process model of exercise 11.
]

receiveClaim with
  output o1: Claim
end

---

(source_file)

==================
doc-frame: user-manual/chapters/AnswerFormat.typ:block:1
==================

Individual AnswerFormat in Class with
  attribute
     forQuery : QueryClass;
     order : Order;
     orderBy : String;
     head : String;
     pattern : String;
     tail : String;
     fileType: String
end

---
